@@ -18,10 +18,49 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>GarbageCollector.Main</mainClass>
+                    <commandlineArgs>-Xms512m -Xmx512m</commandlineArgs>
+                    <!--commandlineArgs>-Xms512m -Xmx512m -XX:+UseSerialGC</commandlineArgs-->
+                    <!--commandlineArgs>-Xms512m -Xmx512m -XX:+UseParNewGC</commandlineArgs-->
+                    <!--commandlineArgs>-Xms512m -Xmx512m -XX:+UseG1GC</commandlineArgs-->
+                    <!--commandlineArgs>-Xms512m -Xmx512m -XX:+UseConcMarkSweepGC</commandlineArgs-->
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>my-maven-assembly-plugin</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <archive>
+                        <manifest>
+                            <mainClass>GarbageCollector.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
